# foo

./: .gitignore  README.md  flake.nix  foo.cabal  foo.nix
lib/: Foo.hs
lib/Foo/: Wee.hs
