cabal-version:      3.0
name:               foo
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Foo
    -- other-modules:
    -- other-extensions:
    build-depends:    base, aeson
    hs-source-dirs:   lib
    default-language: Haskell2010
